--- a/frontend/src/UIComponents/ContextMenu/ContextMenu.css
+++ b/frontend/src/UIComponents/ContextMenu/ContextMenu.css
@@ -5,7 +5,7 @@
     opacity: 0;
     display: flex;
     flex-direction: column;
-    width: 180px;
+    width: 200px;
     background: #f9f9f9;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -17,6 +17,14 @@
 .context-menu.active {
     visibility: visible;
     opacity: 1;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    background: #f9f9f9;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 4px 7px;
 }
 
 .menu-item {
@@ -26,7 +34,7 @@
     color: #4F4F4F;
     padding: 4px 4px;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 14px;
     border-radius: 5px;
 }
 
